--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
         <div class="form-section">
             <h3>Buying Inputs</h3>
             <div class="form-group"><label>Home Purchase Price:</label><input type="number" id="homePrice" /></div>
-            <div class="form-group"><label>Down Payment (%):</label><input type="number" id="downPayment" /></div>
+            <div class="form-group">
+    <label>Down Payment (%):</label>
+    <div class="small-note">(Typical: FHA 3.5%, Conventional 3–5%)</div>
+    <input type="number" id="downPayment" />
+</div>
+
             <div class="form-group"><label>Loan Interest Rate (% per year):</label><input type="number" id="interestRate" /></div>
             <div class="form-group"><label>Loan Term (years):</label><input type="number" id="loanTerm" /></div>
             <div class="form-group"><label>Property Taxes (annual $):</label><input type="number" id="propertyTaxesDollar" /></div>
