--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
     <input type="number" id="downPayment" />
 </div>
 
-            <div class="form-group"><label>Loan Interest Rate (% per year):</label><input type="number" id="interestRate" /></div>
+           <div class="form-group">
+    <label>Loan Interest Rate (% per year):</label>
+    <div class="small-note">(For a more accurate rate, please consult a lender.)</div>
+    <input type="number" id="interestRate" />
+</div>
+
             <div class="form-group"><label>Loan Term (years):</label><input type="number" id="loanTerm" /></div>
             <div class="form-group"><label>Property Taxes (annual $):</label><input type="number" id="propertyTaxesDollar" /></div>
             <div class="form-group"><label>Annual Insurance Cost:</label><input type="number" id="insurance" /></div>
