--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
     <input type="number" id="interestRate" />
 </div>
 
-            <div class="form-group"><label>Loan Term (years):</label><input type="number" id="loanTerm" /></div>
+           <div class="form-group">
+    <label>Loan Term (years):</label>
+    <div class="small-note">(Typical loan terms are 15 or 30 years.)</div>
+    <input type="number" id="loanTerm" />
+</div>
             <div class="form-group"><label>Property Taxes (annual $):</label><input type="number" id="propertyTaxesDollar" /></div>
             <div class="form-group"><label>Annual Insurance Cost:</label><input type="number" id="insurance" /></div>
             <div class="form-group"><label>Annual Home Appreciation (%):</label><input type="number" id="growthRate" /></div>
