--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
     <div class="small-note">(Typical loan terms are 15 or 30 years.)</div>
     <input type="number" id="loanTerm" />
 </div>
-            <div class="form-group"><label>Property Taxes (annual $):</label><input type="number" id="propertyTaxesDollar" /></div>
+            <div class="form-group">
+    <label>Property Taxes (annual $):</label>
+    <div class="small-note">(Check your county's tax estimator for a more accurate amount.)</div>
+    <input type="number" id="propertyTaxesDollar" />
+</div>
             <div class="form-group"><label>Annual Insurance Cost:</label><input type="number" id="insurance" /></div>
             <div class="form-group"><label>Annual Home Appreciation (%):</label><input type="number" id="growthRate" /></div>
         </div>
