--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
     <div class="small-note">(Check your county's tax estimator for a more accurate amount.)</div>
     <input type="number" id="propertyTaxesDollar" />
 </div>
-            <div class="form-group"><label>Annual Insurance Cost:</label><input type="number" id="insurance" /></div>
+            <div class="form-group">
+    <label>Annual Insurance Cost:</label>
+    <div class="small-note">(For a more accurate rate, please consult an insurance representative.)</div>
+    <input type="number" id="insurance" />
+</div>
             <div class="form-group"><label>Annual Home Appreciation (%):</label><input type="number" id="growthRate" /></div>
         </div>
 
