--- a/index.html
+++ b/index.html
@@ -70,8 +70,12 @@
     <div class="small-note">(For a more accurate rate, please consult an insurance representative.)</div>
     <input type="number" id="insurance" />
 </div>
-            <div class="form-group"><label>Annual Home Appreciation (%):</label><input type="number" id="growthRate" /></div>
-        </div>
+         <div class="form-group">
+    <label>Annual Home Appreciation (%):</label>
+    <div class="small-note">(The national average home appreciation is typically between 2–4% annually.)</div>
+    <input type="number" id="growthRate" />
+</div>
+
 
         <!-- Renting Section -->
         <div class="form-section">
