--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <div class="small-note">(The national average home appreciation is typically between 2–4% annually.)</div>
     <input type="number" id="growthRate" />
 </div>
+        </div>
 
 
         <!-- Renting Section -->
