--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
         <!-- Renting Section -->
         <div class="form-section">
             <h3>Renting Inputs</h3>
-            <div class="form-group"><label>Monthly Rent:</label><input type="number" id="monthlyRent" value="1600" /></div>
+            <div class="form-group">
+    <label>Monthly Rent:</label>
+    <div class="small-note">(Tip: Compare rent prices to homes similar in size, location, and style to what you plan to buy.)</div>
+    <input type="number" id="monthlyRent" value="1600" />
+</div>
             <div class="form-group"><label>Annual Rent Increase (%):</label><input type="number" id="rentIncrease" /></div>
 
             <div class="sub-section">
