--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@
     <div class="small-note">(Tip: Compare rent prices to homes similar in size, location, and style to what you plan to buy.)</div>
     <input type="number" id="monthlyRent" value="1600" />
 </div>
-            <div class="form-group"><label>Annual Rent Increase (%):</label><input type="number" id="rentIncrease" /></div>
+            <div class="form-group">
+    <label>Annual Rent Increase (%):</label>
+    <div class="small-note">(National average annual rent increases typically range between 3–5%.)</div>
+    <input type="number" id="rentIncrease" />
+</div>
 
             <div class="sub-section">
                 <h4>Investment Assumption</h4>
