--- a/index.html
+++ b/index.html
@@ -96,7 +96,12 @@
                 <h4>Investment Assumption</h4>
                 <div class="form-group">
                     <label>Estimated Annual Investment Return (%):</label>
-                    <div class="small-note">Enter the % return you believe you would earn if you invested the monthly difference between mortgage and rent.</div>
+                  <div class="form-group">
+    <label>Estimated Annual Investment Return (%):</label>
+    <div class="small-note">(Historically, investments like the stock market have returned around 6–10% per year, but returns are never guaranteed.)</div>
+    <input type="number" id="investmentReturn" value="5" />
+</div>
+
                     <input type="number" id="investmentReturn" value="5" />
                 </div>
             </div>
