--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
         <!-- Buying Section -->
         <div class="form-section">
             <h3>Buying Inputs</h3>
-            <div class="form-group"><label>Home Purchase Price:</label><input type="number" id="homePrice" /></div>
+            <div class="form-group">
+    <label>Home Purchase Price:</label>
+    <div class="small-note">(To get a more accurate result using this calculator, speak with a lender about what home price you may qualify for.)</div>
+    <input type="number" id="homePrice" />
+</div>
+
             <div class="form-group">
     <label>Down Payment (%):</label>
     <div class="small-note">(Typical: FHA 3.5%, Conventional 3–5%)</div>
