--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
 <div class="container">
     <h2>Rent vs Buy Calculator</h2>
 
-    <div class="comparison-period">
-        <label><strong>Comparison Period (Years to Compare Buying vs Renting):</strong></label>
-        <input type="number" id="years" style="width: 100%; padding: 8px; border: 1px solid #ccc; border-radius: 5px;" />
-    </div>
+   <div class="comparison-period">
+    <label><strong>Comparison Period (Years to Compare Buying vs Renting):</strong></label>
+    <div class="small-note">(This is the number of years you expect to own the home or rent before moving or selling.)</div>
+    <input type="number" id="years" style="width: 100%; padding: 8px; border: 1px solid #ccc; border-radius: 5px;" />
+</div>
+
 
     <div class="form-sections">
         <!-- Buying Section -->
