--- a/index.html
+++ b/index.html
@@ -98,7 +98,6 @@ function calculate() {
     const loanAmount = homePrice - (homePrice * downPayment);
     const monthlyPayment = loanAmount * interestRate * Math.pow(1 + interestRate, loanTerm) / (Math.pow(1 + interestRate, loanTerm) - 1);
     const monthlyHousingCost = monthlyPayment + taxes + insurance;
-    const downPaymentAmt = homePrice * downPayment;
 
     let rentCosts = 0;
     let currentRent = monthlyRent;
@@ -114,7 +113,7 @@ function calculate() {
         let totalInvestedThisYear = 0;
 
         for (let m = 0; m < 12; m++) {
-            const monthlyDifference = currentRent - monthlyHousingCost;
+            const monthlyDifference = monthlyHousingCost - currentRent;
             if (monthlyDifference > 0) {
                 investmentValue = (investmentValue + monthlyDifference) * (1 + investmentReturn / 12);
                 totalInvestedThisYear += monthlyDifference;
@@ -131,7 +130,6 @@ function calculate() {
         homeValue *= (1 + appreciation);
     }
 
-    const breakEvenYear = rentSeries.findIndex((rent, i) => rent > buySeries[i]) + 1;
     const equityGained = homeValue - loanAmount;
     const averageMonthlyDifference = differenceSeries.reduce((a, b) => a + b, 0) / (years * 12);
 
@@ -153,7 +151,7 @@ function calculate() {
     document.getElementById('results').innerHTML = `
         <div><strong>Monthly Mortgage (PITI):</strong> $${monthlyHousingCost.toFixed(2)}</div>
         <div><strong>Monthly Rent (Year 1):</strong> $${parseFloat(document.getElementById('monthlyRent').value).toFixed(2)}</div>
-        <div><strong>Average Monthly Difference (if rent is higher):</strong> $${averageMonthlyDifference.toFixed(2)}</div>
+        <div><strong>Average Monthly Difference (if mortgage is higher):</strong> $${averageMonthlyDifference.toFixed(2)}</div>
         <div><strong>Estimated Home Value After ${years} Years:</strong> $${homeValue.toFixed(2)}</div>
         <div><strong>Total Equity Gained:</strong> $${equityGained.toFixed(2)}</div>
         <div><strong>Total Rent Paid Over ${years} Years:</strong> $${rentCosts.toFixed(2)}</div>
